--- a/index.html
+++ b/index.html
@@ -10,60 +10,56 @@
 </head>
 <body>
     <div id="main" class="relative flex flex-col items-center w-screen h-screen bg-blue-300">
-        <h1 class="text-8xl font-sans font-semibold text-black text-opacity-80 mt-40 wicked-bounce-In">wicked-animations</h1>
+        <h1 class="text-8xl font-sans font-semibold text-black text-opacity-80 mt-40 wicked-bounceIn">wicked-animations</h1>
         <p class="hidden mt-10 text-2xl">Some cool css animations for your project</p>
         <div id="drop" class="hidden">
             <select id="dropdown" class="mt-20 w-48 p-2 rounded-md focus:outline-none">
                 <optgroup label="fade">
-                    <option value="fade-In">fade-In</option>
-                    <option value="fade-In-Top">fade-In-Top</option>
-                    <option value="fade-In-Bottom">fade-In-Bottom</option>
-                    <option value="fade-In-Left">fade-In-Left</option>
-                    <option value="fade-In-Right">fade-In-Right</option>
+                    <option value="fadeIn">fadeIn</option>
+                    <option value="fadeInTop">fadeInTop</option>
+                    <option value="fadeInBottom">fadeInBottom</option>
+                    <option value="fadeInLeft">fadeInLeft</option>
+                    <option value="fadeInRight">fadeInRight</option>
                 </optgroup>
-                <optgroup label="fade-Out">
-                    <option value="fade-Out">fade-Out</option>
-                    <option value="fade-Out-Top">fade-Out-Top</option>
-                    <option value="fade-Out-Bottom">fade-Out-Bottom</option>
-                    <option value="fade-Out-Left">fade-Out-Left</option>
-                    <option value="fade-Out-Right">fade-Out-Right</option>
+                <optgroup label="fadeOut">
+                    <option value="fadeOut">fadeOut</option>
+                    <option value="fadeOutTop">fadeOutTop</option>
+                    <option value="fadeOutBottom">fadeOutBottom</option>
+                    <option value="fadeOutLeft">fadeOutLeft</option>
+                    <option value="fadeOutRight">fadeOutRight</option>
                 </optgroup>
                 <optgroup label="shake">
-                    <option value="shake-X">shake-X</option>
-                    <option value="shake-Y">shake-Y</option>
+                    <option value="shakeX">shakeX</option>
+                    <option value="shakeY">shakeY</option>
                 </optgroup>
-                <optgroup label="jump-In">
-                    <option value="jump-In-Top">jump-In-Top</option>
-                    <option value="jump-In-Bottom">jump-In-Bottom</option>
-                    <option value="jump-In-Left">jump-In-Left</option>
-                    <option value="jump-In-Right">jump-In-Right</option>
+                <optgroup label="jumpIn">
+                    <option value="jumpInTop">jumpInTop</option>
+                    <option value="jumpInBottom">jumpInBottom</option>
+                    <option value="jumpInLeft">jumpInLeft</option>
+                    <option value="jumpInRight">jumpInRight</option>
                 </optgroup>
-                <optgroup label="jump-Out">
-                    <option value="jump-Out-Top">jump-Out-Top</option>
-                    <option value="jump-Out-Bottom">jump-Out-Bottom</option>
-                    <option value="jump-Out-Left">jump-Out-Left</option>
-                    <option value="jump-Out-Right">jump-Out-Right</option>
+                <optgroup label="jumpOut">
+                    <option value="jumpOutTop">jumpOutTop</option>
+                    <option value="jumpOutBottom">jumpOutBottom</option>
+                    <option value="jumpOutLeft">jumpOutLeft</option>
+                    <option value="jumpOutRight">jumpOutRight</option>
                 </optgroup>
                 <optgroup label="bounce">
-                    <option value="bounce-In">bounce-In</option>
-                    <option value="bounce-Out">bounce-Out</option>
+                    <option value="bounceIn">bounceIn</option>
+                    <option value="bounceOut">bounceOut</option>
                 </optgroup>
                 <optgroup label="rotate">
-                    <option value="rotate-X">rotate-X</option>
-                    <option value="rotate-Y">rotate-Y</option>
-                    <option value="rotate-Z">rotate-Z</option>
+                    <option value="rotateX">rotateX</option>
+                    <option value="rotateY">rotateY</option>
+                    <option value="rotateZ">rotateZ</option>
                 </optgroup>
                 <optgroup label="spin">
-                    <option value="spin-In">spin-In</option>
-                    <option value="spin-Out">spin-Out</option>
+                    <option value="spinIn">spinIn</option>
+                    <option value="spinOut">spinOut</option>
                 </optgroup>
-                <optgroup>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                </optgroup>
+
             </select>
-            <button id="anime" class="ml-10 font-semibold px-5 py-2 border border-purple-500 rounded-md text-purple-500 hover:bg-purple-500 hover:text-white transition ease focus:outline-none">ANIMATE</button>
+            <button id="anime" class="ml-10 font-semibold px-5 py-2 border border-purple-500 rounded-md bg-purple-500 text-white transition ease focus:outline-none">ANIMATE</button>
         </div>
         <div id="icon" class="hidden w-40 h-40 absolute top-2/4 bg-white p-10 rounded-full">
             <img id="bee" src="images/bee.png" alt="">
@@ -72,7 +68,7 @@
     </div>
     <div class="relative flex flex-col w-screen h-full bg-yellow-200 items-center">
         <h2 class="text-4xl font-sans font-light text-black text-opacity-80 mt-20 ">How to use?</h2>
-        <div id="steps" class="flex flex-col items-center w-full mt-5 p-10 justify-around">
+        <div id="steps" class="flex flex-col items-center w-full mt-5 justify-around">
             <div id="one" class="flex flex-col items-center w-1/4 h-96 bg-white rounded-md p-4 mb-10">
                 <img class="w-14 h-14 mb-5 mt-10" src="images/up.png" alt="">
                 <p class="text-xl font-semibold font-sans">First things first.</p>
