--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div id="main" class="relative flex flex-col items-center w-screen h-screen bg-blue-300">
-        <h1 id="head1" class="text-8xl font-sans font-semibold text-black text-opacity-80 mt-40 wicked-bounceIn">wicked-animations</h1>
-        <p class="hidden mt-10 text-2xl">Some cool css animations for your project</p>
+        <h1 id="head1" class="text-8xl font-sans font-semibold text-black text-opacity-80 mt-20 wicked-bounceIn">wicked-animations</h1>
+        <p class="hidden mt-10 text-2xl font-light">Free to use CSS animation library</p>
         <div id="drop" class="hidden">
             <select id="dropdown" class="mt-20 w-48 p-2 rounded-md focus:outline-none">
                 <optgroup label="fade">
