small screen fix

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="main" class="relative flex flex-col items-center w-screen h-screen bg-blue-300">
-        <h1 id="head1" class="text-8xl font-sans font-semibold text-black text-opacity-80 mt-20 wicked-bounceIn">wicked-animations</h1>
+        <h1 id="head1" class="text-7xl font-sans font-semibold text-black text-opacity-80 mt-16 wicked-bounceIn">wicked-animations</h1>
         <p class="hidden mt-10 text-2xl font-light">Free to use CSS animation library</p>
         <div id="drop" class="hidden">
             <select id="dropdown" class="mt-20 w-48 p-2 rounded-md focus:outline-none">
@@ -80,7 +80,7 @@
             </select>
             <button id="anime" class="ml-10 font-semibold px-5 py-2 border border-purple-500 rounded-md bg-purple-500 text-white transition ease focus:outline-none">ANIMATE</button>
         </div>
-        <div id="icon" class="hidden w-40 h-40 absolute top-2/4 bg-white p-10 rounded-full">
+        <div id="icon" class="hidden w-40 h-40 mt-72 bg-white p-10 rounded-full">
             <img id="bee" src="images/bee.png" alt="">
         </div>
         <img class="h-5 w-5 absolute bottom-10 animate-bounce" src="images/down-arrow.svg" alt="">
@@ -88,7 +88,7 @@
     <div class="relative flex flex-col w-screen h-full bg-yellow-200 items-center">
         <h2 class="text-4xl font-sans font-light text-black text-opacity-80 mt-20 ">How to use?</h2>
         <div id="steps" class="flex flex-col items-center w-full mt-5 justify-around">
-            <div id="one" class="flex flex-col items-center w-1/4 h-96 bg-white rounded-md p-4 mb-10">
+            <div id="one" class="flex flex-col items-center w-1/2 2xl:w-1/4 h-96 bg-white rounded-md p-4 mb-10">
                 <img class="w-14 h-14 mb-5 mt-10" src="images/up.png" alt="">
                 <p class="text-xl font-semibold font-sans">First things first.</p>
                 <p class="mt-5">Download library files from <a class="text-blue-500 underline" href="images/up.png" download>here</a></p>
@@ -96,13 +96,13 @@
                 <p>visit <span class="font-semibold">Github</span> repo <a class="text-blue-500 underline" target="_blank" href="https://github.com/d855/wicked-animations">here</a>.</p>
                 <p class="mt-5">Add library files to your project.</p>
             </div>
-            <div id="two" class="flex flex-col items-center w-1/4 h-96 bg-white rounded-md p-4 mb-10">
+            <div id="two" class="flex flex-col items-center w-1/2  2xl:w-1/4 h-96 bg-white rounded-md p-4 mb-10">
                 <img class="w-14 h-14 mb-5 mt-10" src="images/peace.png" alt="">
                 <p class="text-xl font-semibold font-sans">Link it.</p>
                 <p class="mt-5">Link css file to your header.</p>
                 <img class="rounded-md w-2/3 mt-5" src="images/Screenshot 2021-03-29 at 15.15.01.png" alt="">
             </div>
-            <div id="three" class="flex flex-col items-center w-1/4 h-96 bg-white rounded-md p-4 mb-10">
+            <div id="three" class="flex flex-col items-center w-1/2 2xl:w-1/4 h-96 bg-white rounded-md p-4 mb-10">
                 <img class="w-14 h-14 mb-5 mt-10" src="images/snap.png" alt="">
                 <p class="text-xl font-semibold font-sans">Voilà</p>
                 <p class="mt-5">Add the animation class to your element and it will perform animation.</p>
