--- a/index.html
+++ b/index.html
@@ -77,10 +77,16 @@
                     <option value="blurOutLeft">blurOutLeft</option>
                     <option value="blurOutRight">blurOutRight</option>
                 </optgroup>
+                <optgroup label="other">
+                    <option value="wave">wave</option>
+                    <option value="blink">blink</option>
+                    <option value="vanish">vanish</option>
+                    <option value="doorOpen">doorOpen</option>
+                </optgroup>
             </select>
             <button id="anime" class="ml-10 font-semibold px-5 py-2 border border-purple-500 rounded-md bg-purple-500 text-white transition ease focus:outline-none">ANIMATE</button>
         </div>
-        <div id="icon" class="hidden w-40 h-40 mt-72 bg-white p-10 rounded-full">
+        <div id="icon" class="hidden w-40 h-40 mt-28 lg:mt-60 bg-white p-10 rounded-full">
             <img id="bee" src="images/bee.png" alt="">
         </div>
         <img class="h-5 w-5 absolute bottom-10 animate-bounce" src="images/down-arrow.svg" alt="">
@@ -91,7 +97,7 @@
             <div id="one" class="flex flex-col items-center w-1/2 2xl:w-1/4 h-96 bg-white rounded-md p-4 mb-10">
                 <img class="w-14 h-14 mb-5 mt-10" src="images/up.png" alt="">
                 <p class="text-xl font-semibold font-sans">First things first.</p>
-                <p class="mt-5">Download library files from <a class="text-blue-500 underline" href="images/up.png" download>here</a></p>
+                <p class="mt-5">Download library files from <a class="text-blue-500 underline" href="./css/wicked.css" download>here</a></p>
                 <p>or</p>
                 <p>visit <span class="font-semibold">Github</span> repo <a class="text-blue-500 underline" target="_blank" href="https://github.com/d855/wicked-animations">here</a>.</p>
                 <p class="mt-5">Add library files to your project.</p>
@@ -100,13 +106,13 @@
                 <img class="w-14 h-14 mb-5 mt-10" src="images/peace.png" alt="">
                 <p class="text-xl font-semibold font-sans">Link it.</p>
                 <p class="mt-5">Link css file to your header.</p>
-                <img class="rounded-md w-2/3 mt-5" src="images/Screenshot 2021-03-29 at 15.15.01.png" alt="">
+                <img class="rounded-md w-2/3 mt-5" src="images/Screenshot 2021-04-19 at 23.09.21.png" alt="">
             </div>
             <div id="three" class="flex flex-col items-center w-1/2 2xl:w-1/4 h-96 bg-white rounded-md p-4 mb-10">
                 <img class="w-14 h-14 mb-5 mt-10" src="images/snap.png" alt="">
                 <p class="text-xl font-semibold font-sans">Voilà</p>
                 <p class="mt-5">Add the animation class to your element and it will perform animation.</p>
-                <img class="rounded-md w-11/12 mt-5" src="images/Screenshot 2021-03-30 at 14.10.21.png" alt="">
+                <img class="rounded-md w-11/12 mt-5" src="images/Screenshot 2021-04-19 at 23.08.55.png" alt="">
             </div>
         </div>
     </div>
