--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/wicked.css">
     <script src="script.js"></script>
 </head>
-<body>
+<body class="overflow-y-scroll overflow-y-hidden">
     <div id="main" class="relative flex flex-col items-center w-screen h-screen bg-blue-300">
         <h1 id="head1" class="text-7xl font-sans font-semibold text-black text-opacity-80 mt-16 wicked-bounceIn">wicked-animations</h1>
         <p class="hidden mt-10 text-2xl font-light">Free to use CSS animation library</p>
@@ -99,7 +99,7 @@
                 <p class="text-xl font-semibold font-sans">First things first.</p>
                 <p class="mt-5">Download library files from <a class="text-blue-500 underline" href="./css/wicked.css" download>here</a></p>
                 <p>or</p>
-                <p>visit <span class="font-semibold">Github</span> repo <a class="text-blue-500 underline" target="_blank" href="https://github.com/d855/wicked-animations">here</a>.</p>
+                <p>visit <span class="font-semibold">Github</span> repo <a class="text-blue-500 underline" target="_blank" href="https://github.com/d855/wicked-presentation">here</a>.</p>
                 <p class="mt-5">Add library files to your project.</p>
             </div>
             <div id="two" class="flex flex-col items-center w-1/2  2xl:w-1/4 h-96 bg-white rounded-md p-4 mb-10">
@@ -120,9 +120,9 @@
         <div class="text-center">
             <p class="mb-5 text-xl text-white">This library was created by pure fun and love for animations.</p>
             <p class="mb-5 text-xl text-white">For more information head to the GitHub repo.</p>
-            <p class="text-xl text-white">There you can find a list of all the animations and additional things that you can use for your project.</p>
+            <p class="text-xl text-white">There you can find a README file with list of all the animations and additional things that you can use for your project.</p>
         </div>
-        <a class="mt-10" target="_blank" href="https://github.com/d855/wicked-animations"><img class="h-5 w-5" src="images/github.png" alt=""></a>
+        <a class="mt-10" target="_blank" href="https://github.com/d855/wicked-presentation"><img class="h-5 w-5" src="images/github.png" alt=""></a>
     </div>
 </body>
 </html>
