--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
                 <img class="w-14 h-14 mb-5 mt-10" src="images/peace.png" alt="">
                 <p class="text-xl font-semibold font-sans">Link it.</p>
                 <p class="mt-5">Link css file to your header.</p>
-                <img class="rounded-md w-2/3 mt-5" src="images/Screenshot 2021-04-19 at 23.09.21.png" alt="">
+                <p class="bg-gray-700 text-gray-500 p-5 mt-5 rounded-md">&lt;<span class="text-red-500">link</span> <span class="text-green-500 italic">rel</span>=<span class="text-yellow-500">"stylesheet"</span> <span class="text-green-500 italic">href</span>=<span class="text-yellow-500">"css/wicked.css"</span>&gt;</p>
             </div>
             <div id="three" class="flex flex-col items-center w-1/2 2xl:w-1/4 h-96 bg-white rounded-md p-4 mb-10">
                 <img class="w-14 h-14 mb-5 mt-10" src="images/snap.png" alt="">
                 <p class="text-xl font-semibold font-sans">Voilà</p>
                 <p class="mt-5">Add the animation class to your element and it will perform animation.</p>
-                <img class="rounded-md w-11/12 mt-5" src="images/Screenshot 2021-04-19 at 23.08.55.png" alt="">
+                <p class="bg-gray-700 text-gray-500 p-5 mt-5 rounded-md">&lt;<span class="text-red-500">div</span> <span class="text-green-500 italic">class</span>="<span class="text-yellow-500">wicked-rotateX</span>"&gt; <span class="text-white">Example</span> &lt;/<span class="text-red-500">div</span>&gt;</p>
             </div>
         </div>
     </div>
