--- a/index.html
+++ b/index.html
@@ -92,23 +92,23 @@
         <img class="h-5 w-5 absolute bottom-10 animate-bounce" src="images/down-arrow.svg" alt="">
     </div>
     <div class="relative flex flex-col w-screen h-full bg-yellow-200 items-center">
-        <h2 class="text-4xl font-sans font-light text-black text-opacity-80 mt-20 ">How to use?</h2>
+        <h2 class="text-4xl font-sans text-blue-800 font-bold text-opacity-80 mt-20 mb-20">How to use?</h2>
         <div id="steps" class="flex flex-col items-center w-full mt-5 justify-around">
-            <div id="one" class="flex flex-col items-center w-1/2 2xl:w-1/4 h-96 bg-white rounded-md p-4 mb-10">
+            <div class="card flex flex-col items-center bg-white w-full md:w-1/2 xl:w-1/4 mb-10 p-10">
                 <img class="w-14 h-14 mb-5 mt-10" src="images/up.png" alt="">
                 <p class="text-xl font-semibold font-sans">First things first.</p>
-                <p class="mt-5">Download library files from <a class="text-blue-500 underline" href="./css/wicked.css" download>here</a></p>
+                <p class="mt-5">Download library files from <a class="text-blue-500 underline" href="./wicked-animations.zip" download="files">here </a></p>
                 <p>or</p>
                 <p>visit <span class="font-semibold">Github</span> repo <a class="text-blue-500 underline" target="_blank" href="https://github.com/d855/wicked-presentation">here</a>.</p>
                 <p class="mt-5">Add library files to your project.</p>
             </div>
-            <div id="two" class="flex flex-col items-center w-1/2  2xl:w-1/4 h-96 bg-white rounded-md p-4 mb-10">
+            <div class="card flex flex-col items-center bg-white w-full md:w-1/2 xl:w-1/4 mb-10 p-10">
                 <img class="w-14 h-14 mb-5 mt-10" src="images/peace.png" alt="">
                 <p class="text-xl font-semibold font-sans">Link it.</p>
                 <p class="mt-5">Link css file to your header.</p>
                 <p class="bg-gray-700 text-gray-500 p-5 mt-5 rounded-md">&lt;<span class="text-red-500">link</span> <span class="text-green-500 italic">rel</span>=<span class="text-yellow-500">"stylesheet"</span> <span class="text-green-500 italic">href</span>=<span class="text-yellow-500">"css/wicked.css"</span>&gt;</p>
             </div>
-            <div id="three" class="flex flex-col items-center w-1/2 2xl:w-1/4 h-96 bg-white rounded-md p-4 mb-10">
+            <div class="card flex flex-col items-center bg-white w-full md:w-1/2 xl:w-1/4 mb-20 p-10">
                 <img class="w-14 h-14 mb-5 mt-10" src="images/snap.png" alt="">
                 <p class="text-xl font-semibold font-sans">Voilà</p>
                 <p class="mt-5">Add the animation class to your element and it will perform animation.</p>
