--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="card flex flex-col items-center bg-white w-full md:w-1/2 xl:w-1/4 mb-10 p-10">
                 <img class="w-14 h-14 mb-5 mt-10" src="images/up.png" alt="">
                 <p class="text-xl font-semibold font-sans">First things first.</p>
-                <p class="mt-5">Download library files from <a class="text-blue-500 underline" href="./wicked-animations.zip" download="files">here </a></p>
+                <p class="mt-5">Download library files from <a class="text-blue-500 underline" href="./wicked-animations.zip" download="wicked-animations">here </a></p>
                 <p>or</p>
                 <p>visit <span class="font-semibold">Github</span> repo <a class="text-blue-500 underline" target="_blank" href="https://github.com/d855/wicked-presentation">here</a>.</p>
                 <p class="mt-5">Add library files to your project.</p>
