--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <h2 class="text-4xl font-sans text-blue-800 font-bold text-opacity-80 mt-20 mb-20">How to use?</h2>
         <div id="steps" class="flex flex-col items-center w-full mt-5 justify-around">
             <div class="card flex flex-col items-center bg-white w-full md:w-1/2 xl:w-1/4 mb-10 p-10">
-                <img class="w-14 h-14 mb-5 mt-10" src="images/up.png" alt="">
+                <img class="w-14 h-14 mb-5 mt-10" src="images/up.png" alt="up">
                 <p class="text-xl font-semibold font-sans">First things first.</p>
                 <p class="mt-5">Download library files from <a class="text-blue-500 underline" href="./wicked-animations.zip" download="wicked-animations">here </a></p>
                 <p>or</p>
@@ -103,13 +103,13 @@
                 <p class="mt-5">Add library files to your project.</p>
             </div>
             <div class="card flex flex-col items-center bg-white w-full md:w-1/2 xl:w-1/4 mb-10 p-10">
-                <img class="w-14 h-14 mb-5 mt-10" src="images/peace.png" alt="">
+                <img class="w-14 h-14 mb-5 mt-10" src="images/peace.png" alt="peace">
                 <p class="text-xl font-semibold font-sans">Link it.</p>
                 <p class="mt-5">Link css file to your header.</p>
                 <p class="bg-gray-700 text-gray-500 p-5 mt-5 rounded-md">&lt;<span class="text-red-500">link</span> <span class="text-green-500 italic">rel</span>=<span class="text-yellow-500">"stylesheet"</span> <span class="text-green-500 italic">href</span>=<span class="text-yellow-500">"css/wicked.css"</span>&gt;</p>
             </div>
             <div class="card flex flex-col items-center bg-white w-full md:w-1/2 xl:w-1/4 mb-20 p-10">
-                <img class="w-14 h-14 mb-5 mt-10" src="images/snap.png" alt="">
+                <img class="w-14 h-14 mb-5 mt-10" src="images/snap.png" alt="snap">
                 <p class="text-xl font-semibold font-sans">Voilà</p>
                 <p class="mt-5">Add the animation class to your element and it will perform animation.</p>
                 <p class="bg-gray-700 text-gray-500 p-5 mt-5 rounded-md">&lt;<span class="text-red-500">div</span> <span class="text-green-500 italic">class</span>="<span class="text-yellow-500">wicked-rotateX</span>"&gt; <span class="text-white">Example</span> &lt;/<span class="text-red-500">div</span>&gt;</p>
@@ -122,7 +122,7 @@
             <p class="mb-5 text-xl text-white">For more information head to the GitHub repo.</p>
             <p class="text-xl text-white">There you can find a README file with list of all the animations and additional things that you can use for your project.</p>
         </div>
-        <a class="mt-10" target="_blank" href="https://github.com/d855/wicked-presentation"><img class="h-5 w-5" src="images/github.png" alt=""></a>
+        <a class="mt-10" target="_blank" href="https://github.com/d855/wicked-presentation"><img class="h-5 w-5" src="images/github.png" alt="github"></a>
     </div>
 </body>
 </html>
